
cc_library(
    name = "prgl",
    srcs = glob(["src/*.cxx"]),
    hdrs = glob(["prgl/*.hxx"]),
    visibility = ["//visibility:public"],
    linkopts = [
        "-lGL",
        "-lGLEW",
        "-lGLU",
        "-ldl",
        "-lm",
        "-lpthread",
        "/usr/lib/x86_64-linux-gnu/libGLX.so",
        "/usr/lib/x86_64-linux-gnu/libOpenGL.so",
        "/usr/lib/x86_64-linux-gnu/libX11.so",
        "/usr/lib/x86_64-linux-gnu/librt.so",
        "/usr/lib/x86_64-linux-gnu/libglfw.so",
    ],
    deps = []
)
