load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "prgl",
    srcs = glob(["src/*.cxx"]),
    hdrs = glob(["prgl/*.hxx"]),
    copts = [
        "-Wall",
        "-Werror",
        "-Weverything",
        "-Wno-c++98-compat",
        "-Wno-padded",
        "-Wno-documentation",
        "-Wno-global-constructors",
        "-Wno-exit-time-destructors",
    ],
    linkopts = [
        "-lGL",
        "-lGLEW",
        "-lGLU",
        "-ldl",
        "-lm",
        "-lpthread",
        "/usr/lib/x86_64-linux-gnu/libGLX.so",
        "/usr/lib/x86_64-linux-gnu/libOpenGL.so",
        "/usr/lib/x86_64-linux-gnu/libX11.so",
        "/usr/lib/x86_64-linux-gnu/librt.so",
        "/usr/lib/x86_64-linux-gnu/libglfw.so",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)
